--- a/CheahMunXi/chat_v2/.env.example
+++ b/CheahMunXi/chat_v2/.env.example
@@ -1,22 +1,38 @@
-APP_NAME=First Web App
-SECRET_KEY=
+# ========================================
+# Application
+# ========================================
+APP_NAME=Lost and Found MMU Chat APP
+SECRET_KEY=super_secret_key_here
 HOST=localhost
 PORT=8080
+DEBUG=FALSE
 
+# ========================================
+# Database
+# ========================================
 DB_CONNECTION=sqlite
 DB_DATABASE=first.db
 
+# ========================================
+# Mail (Gmail SMTP)
+# ========================================
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=your_email@gmail.com
-MAIL_PASSWORD=your_app_password
-MAIL_FROM_ADDRESS=your_email@gmail.com
+MAIL_USERNAME=lostandfoundmmu@gmail.com
+MAIL_PASSWORD=urpktrgmfooghxme
 MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=lostandfoundmmu@gmail.com
+MAIL_FROM_NAME=Lost and Found MMU
 
+# ========================================
+# Email Notifications
+# ========================================
 EMAIL_NOTIFICATIONS_ENABLED=TRUE
 EMAIL_NOTIFICATIONS_COOLDOWN=600
 
-DEBUG=FALSE
+# ========================================
+# Logging
+# ========================================
 LOG_LEVEL=info
 LOG_FILE=app.log
