--- a/WongZhiYun/file/chat_v2/.env.example
+++ b/WongZhiYun/file/chat_v2/.env.example
@@ -11,7 +11,7 @@ DEBUG=FALSE
 # Database
 # ========================================
 DB_CONNECTION=sqlite
-DB_DATABASE=first.db
+DB_DATABASE=sqlite:///C:/Users/HP/Lost-Found/WongZhiYun/instance/users.db
 
 # ========================================
 # Mail (Gmail SMTP)
